[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skas-backtest"
version = "0.1.0"
description = "A comprehensive backtesting framework for NSE options trading strategies"
authors = [{name = "SKAS Trading", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["backtesting", "options", "trading", "nse", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "python-dateutil>=2.8.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "tqdm>=4.60.0",
    "tabulate>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/saasrinivasan/skas-backtest"
Repository = "https://github.com/saasrinivasan/skas-backtest"
Documentation = "https://github.com/saasrinivasan/skas-backtest/blob/main/README.md"
"Bug Tracker" = "https://github.com/saasrinivasan/skas-backtest/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["skas_backtest*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=skas_backtest --cov-report=html --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (may require external data)",
    "slow: marks tests as slow running",
]